fix bug on main menu

--- a/26-Lesson Project- 2/index.html
+++ b/26-Lesson Project- 2/index.html
@@ -1,186 +1,183 @@
 <!DOCTYPE html>
 <html lang="e-US" dir="ltr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/css/lightslider.min.css"
-    />
-    <link rel="stylesheet" href="CSS/style.css" />
-  </head>
-  <body>
-    <div class="container">
-      <!--Main Header-->
-      <header class="main-header">
-        <!--Logo holder-->
-        <div class="logo-holder">
-          <a href="#"></a>
-          <img
-            src="img/vecteezy_mouse-click-pixel-digital-letter-w_7748379-1.jpg"
-            alt="sample company logo"
-            height="60px"
-            width="110px"
-          />
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/css/lightslider.min.css" />
+  <link rel="stylesheet" href="CSS/style.css" />
+</head>
+
+<body>
+  <div class="container">
+    <!--Main Header-->
+    <header class="main-header">
+      <!--Logo holder-->
+      <div class="logo-holder">
+        <a href="#"></a>
+        <img src="img/vecteezy_mouse-click-pixel-digital-letter-w_7748379-1.jpg" alt="sample company logo" height="60px"
+          width="110px" />
+      </div>
+      <!--Logo holder-->
+      <!--search holder-->
+      <div class="search-holder">
+        <form action="" method="get">
+          <input type="search" name="s" placeholder="Search for.." />
+          <button type="submit">Search</button>
+        </form>
+      </div>
+      <!--search holder-->
+    </header>
+    <!--Main Header-->
+    <!--Main menu-->
+    <nav class="main-menu">
+      <ul class="mobile-menu">
+        <li><a href="#">Menu</a></li>
+        <li><a href="#" class="toggler">+</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li>
+          <a href="#">Services</a>
+          <ul class="drop">
+            <li><a href="#">Service One</a></li>
+            <li><a href="#">Service Two</a></li>
+            <li><a href="#">Service Three</a></li>
+          </ul>
+        </li>
+        <li><a href="#">Products</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+    <!--Main menu-->
+    <!--Bannner Slider-->
+    <section class="banner-slider">
+      <ul id="adaptive">
+        <li><img src="https://placehold.co/1000x350" alt="" /></li>
+        <li><img src="https://placehold.co/1000x350" alt="" /></li>
+        <li><img src="https://placehold.co/1000x350" alt="" /></li>
+      </ul>
+    </section>
+    <!--Bannner Slider-->
+    <!--Content Holder-->
+    <section class="content-holder">
+      <main class="content">
+        <h1>Main Heading for site</h1>
+        <h2>Sub Heading for site</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam
+          pariatur blanditiis beatae, libero culpa recusandae voluptatibus
+          necessitatibus suscipit illum aut est expedita autem accusantium non
+          voluptatem delectus quis laborum dolorum?
+        </p>
+        <p>
+          Qui natus molestias doloremque quia illum odio quisquam, quam fugit
+          vero earum dolor amet placeat? Error asperiores officia hic dolor
+          at, quia laudantium quis quod quaerat ullam sapiente eos magni?
+        </p>
+        <p>
+          Enim eum similique omnis reprehenderit accusantium reiciendis,
+          impedit eveniet natus exercitationem alias sint sapiente inventore
+          vel ullam eaque mollitia eius ipsam asperiores repellat quisquam
+          facilis consequuntur sed! Tempora, debitis omnis?
+        </p>
+      </main>
+      <aside class="sidebar">
+        <div class="widget">
+          <h3>Follow Us</h3>
+          <ul>
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">twitter</a></li>
+            <li><a href="#">LinkedIn</a></li>
+            <li><a href="#">Instagram</a></li>
+          </ul>
         </div>
-        <!--Logo holder-->
-        <!--search holder-->
-        <div class="search-holder">
-          <form action="" method="get">
-            <input type="search" name="s" placeholder="Search for.." />
-            <button type="submit">Search</button>
-          </form>
-        </div>
-        <!--search holder-->
-      </header>
-      <!--Main Header-->
-      <!--Main menu-->
-      <nav class="main-menu">
-        <ul class="mobile-menu">
-          <li><a href="#">Menu</a></li>
-          <li><a href="#" class="toggler">+</a></li>
-        </ul>
+      </aside>
+    </section>
+    <!--Content Holder-->
+    <!--Footer widget-->
+
+    <section class="footer-widget-holder">
+      <div class="footer-widget">
+        <a href="#">
+          <img src="img/vecteezy_mouse-click-pixel-digital-letter-w_7748379-1.jpg" alt="sample company logo"
+            height="60px" width="110px" />
+        </a>
+        <h3>Address</h3>
+        <address>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        </address>
+      </div>
+      <div class="footer-widget">
+        <h4>Sitemap</h4>
         <ul>
           <li><a href="#">Home</a></li>
-          <li>
-            <a href="#">Services</a>
-            <ul class="drop">
-              <li><a href="#">Service One</a></li>
-              <li><a href="#">Service Two</a></li>
-              <li><a href="#">Service Three</a></li>
-            </ul>
-          </li>
-          <li><a href="#">Products</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Product</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-      </nav>
-      <!--Main menu-->
-      <!--Bannner Slider-->
-      <section class="banner-slider">
-        <ul id="adaptive">
-          <li><img src="https://placehold.co/1000x350" alt="" /></li>
-          <li><img src="https://placehold.co/1000x350" alt="" /></li>
-          <li><img src="https://placehold.co/1000x350" alt="" /></li>
+      </div>
+      <div class="footer-widget">
+        <h4>Sitemap</h4>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Product</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
-      </section>
-      <!--Bannner Slider-->
-      <!--Content Holder-->
-      <section class="content-holder">
-        <main class="content">
-          <h1>Main Heading for site</h1>
-          <h2>Sub Heading for site</h2>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam
-            pariatur blanditiis beatae, libero culpa recusandae voluptatibus
-            necessitatibus suscipit illum aut est expedita autem accusantium non
-            voluptatem delectus quis laborum dolorum?
-          </p>
-          <p>
-            Qui natus molestias doloremque quia illum odio quisquam, quam fugit
-            vero earum dolor amet placeat? Error asperiores officia hic dolor
-            at, quia laudantium quis quod quaerat ullam sapiente eos magni?
-          </p>
-          <p>
-            Enim eum similique omnis reprehenderit accusantium reiciendis,
-            impedit eveniet natus exercitationem alias sint sapiente inventore
-            vel ullam eaque mollitia eius ipsam asperiores repellat quisquam
-            facilis consequuntur sed! Tempora, debitis omnis?
-          </p>
-        </main>
-        <aside class="sidebar">
-          <div class="widget">
-            <h3>Follow Us</h3>
-            <ul>
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">twitter</a></li>
-              <li><a href="#">LinkedIn</a></li>
-              <li><a href="#">Instagram</a></li>
-            </ul>
-          </div>
-        </aside>
-      </section>
-      <!--Content Holder-->
-      <!--Footer widget-->
+      </div>
+      <div class="footer-widget">
+        <h4>Sitemap</h4>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Product</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </section>
+    <!--Footer widget-->
+    <!--Side footer-->
+    <footer class="site-footer">
+      <p><small>Copyright &copy; 2025</small></p>
+    </footer>
+    <!--Side footer-->
+  </div>
 
-      <section class="footer-widget-holder">
-        <div class="footer-widget">
-          <a href="#">
-            <img
-              src="img/vecteezy_mouse-click-pixel-digital-letter-w_7748379-1.jpg"
-              alt="sample company logo"
-              height="60px"
-              width="110px"
-            />
-          </a>
-          <h3>Address</h3>
-          <address>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          </address>
-        </div>
-        <div class="footer-widget">
-          <h4>Sitemap</h4>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Product</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </div>
-        <div class="footer-widget">
-          <h4>Sitemap</h4>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Product</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </div>
-        <div class="footer-widget">
-          <h4>Sitemap</h4>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Product</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </div>
-      </section>
-      <!--Footer widget-->
-      <!--Side footer-->
-      <footer class="site-footer">
-        <p><small>Copyright &copy; 2025</small></p>
-      </footer>
-      <!--Side footer-->
-    </div>
-
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/js/lightslider.min.js"></script>
-    <script>
-      $(document).ready(function () {
-        $("#adaptive").lightSlider({
-          adaptiveHeight: true,
-          item: 1,
-          slideMargin: 0,
-          loop: true,
-        });
-        console.log();
-        $(".main-menu > ul:nth-of-type(2)").hide();
-        $(".toggler").click(function () {
-          $(".main-menu > ul:nth-of-type(2)").toggle();
-          $(".drop").css({ 'display': "block", 'position': "relative" });
-        });
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/js/lightslider.min.js"></script>
+  <script>
+    $(document).ready(function () {
+      $("#adaptive").lightSlider({
+        adaptiveHeight: true,
+        item: 1,
+        slideMargin: 0,
+        loop: true,
       });
-    </script>
-  </body>
+
+
+      $(window).on('resize', function () {
+
+        if (screen.width > 750) {
+          $(".main-menu > ul:nth-of-type(2)").show();
+        }
+
+      });
+
+      $(".toggler").click(function () {
+        $(".main-menu > ul:nth-of-type(2)").toggle();
+        $(".drop").css({ display: "block", position: "relative" });
+      });
+    });
+  </script>
+</body>
+
 </html>
